# asciiator

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  input.py  main.py  options.py  pyproject.toml
.github/workflows/: asciiator.yml  python-app.yml
scripts/: create_release.sh
src/: file.py  main.py  options.py  transform.py
src/file/: file.py  gif_file.py  image_file.py  video_file.py
src/util/: logging.py  options.py
test/: helpers.py  test_file.py  test_main.py  test_options.py  test_transform.py
test/file/: test_file.py  test_image_file.py  test_video_file.py
test/resource/img/output/: test_image_expected_text_output.txt
test/util/: test_logging.py  test_options.py
